--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,19 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["react", "prettier"],
-    "extends": [
+  "env": {
+      "browser": true,
+      "es2021": true
+  },
+  "extends": [
       "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:prettier/recommended"
-    ],
-    "rules": {
-      "prettier/prettier": "error"
-    },
-    "settings": {
-      "react": {
-        "version": "detect"
-      }
-    }
+      "plugin:react/recommended"
+  ],
+  "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+  },
+  "plugins": [
+      "react"
+  ],
+  "rules": {
   }
-  
+}
