--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.3",
+    "bootstrap": "^5.3.3",
     "fetch": "^1.1.0",
     "firebase": "^10.11.1",
     "node-fetch": "^3.3.2",
