--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.15.3",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
     "fetch": "^1.1.0",
     "firebase": "^10.11.1",
     "node-fetch": "^3.3.2",
@@ -17,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "stripe": "^15.7.0",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +55,10 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "prettier": "^3.2.5"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
