new signup, cards new

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.19.2",
     "fetch": "^1.1.0",
     "firebase": "^10.11.1",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
