--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-FIREBASE_API_KEY=AIzaSyBVGtmjHGJu2CA5QE_Y8_pyzjZoriXPYjI
-FIREBASE_AUTHDOMAIN=gustoexpress-d9df8.firebaseapp.com
-FIREBASE_PROJECT_ID=gustoexpress-d9df8
-FIREBASE_STORAGE_BUCKET=gustoexpress-d9df8.appspot.com
-FIREBASE_MESSAGING_SENDER_ID=780392660960
-FIREBASE_ID=1:780392660960:web:ef4c9e7e4addcaeacb7585
+REACT_APP_FIREBASE_API_KEY=AIzaSyBVGtmjHGJu2CA5QE_Y8_pyzjZoriXPYjI
+REACT_APP_FIREBASE_AUTHDOMAIN=gustoexpress-d9df8.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=gustoexpress-d9df8
+REACT_APP_FIREBASE_STORAGE_BUCKET=gustoexpress-d9df8.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=780392660960
+REACT_APP_FIREBASE_ID=1:780392660960:web:ef4c9e7e4addcaeacb7585
